[tool.poetry]
name = "pomodoro-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
hashids = "1.3.1"
progress = "1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
